recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: type mismatch;
 found   : Unit
 required: Int
		spiral(nbP += 1 ,90,100,1)
                           ^